# apriltag-android

./: .gitignore  CMakeLists.txt  README  README.md  build.gradle  local.properties  settings.gradle
src/androidTest/java/edu/umich/eecs/april/apriltag/: ApplicationTest.java
src/main/: AndroidManifest.xml
src/main/apriltag/: apriltag.i  apriltag_jni.c
src/main/apriltag/common/: apriltag_jni.cpp  image_f32.c  workerpool.c
src/main/java/edu/umich/eecs/april/apriltag/: AppCompatPreferenceActivity.java  AprilTagDetectorActivity.java  ApriltagDetection.java  ApriltagDetectorActivity.java  ApriltagNative.java  CameraActivity.java  CameraPreviewThread.java  DetectionResult.java  DetectionThread.java  SettingsActivity.java  TagView.java
src/main/res/layout/: activity_camera.xml  detector_activity.xml  main.xml
src/main/res/menu/: main_menu.xml
src/main/res/values/: colors.xml  strings.xml  styles.xml
src/main/res/values-v21/: styles.xml
src/main/res/xml/: pref_apriltag_processing.xml  pref_device_settings.xml  pref_headers.xml  pref_settings.xml
src/test/java/edu/umich/eecs/april/apriltag/: ExampleUnitTest.java
